--- a/trunk/MultiTouchPainting/res/values/strings.xml
+++ b/trunk/MultiTouchPainting/res/values/strings.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="hello">Hello World, MultiTouchPaintingActivity!</string>
-    <string name="app_name">MultiTouchPainting</string>
+    <string name="Title">Multitouch Framework</string>
+    <string name="app_name">MultiTouch</string>
+    <string name="bnReset">Reset</string>
 
 </resources>
